feat: Add new features on iam, notificacion and medicalRecord